Correct the bug that would show a horizontal scroll bar.

--- a/sass/partials/base/_misc.scss
+++ b/sass/partials/base/_misc.scss
@@ -8,6 +8,7 @@
   display: block;
 
   visibility: hidden;
+  overflow: hidden;
 }
 
 .icon::before {
